fixed font sizing on mobile #intro tag

--- a/style.css
+++ b/style.css
@@ -777,8 +777,10 @@ b {
 
 #modal {
     position: relative;
-    height: 50vh;
-    width: 50vh;
+    min-height: 400px;
+    height: 50%;
+    min-width: 350px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -1093,11 +1095,11 @@ b {
     }
 
     #intro strong {
-        font-size: 2.5vw;
+        font-size: 3vw;
     }
 
     #intro p {
-        font-size: 2vw;
+        font-size: 2.5vw;
     }
 
     .largeScreen {
